# sdk-edge-ai

./: .checkpatch.conf  .clang-format  .gitignore  CMAKE_EXPLANATION.md  CODEOWNERS  Jenkinsfile  README.md  pyproject.toml  west.yml
applications/VWW/: .gitignore  CMakeLists.txt  Kconfig  README.md
applications/VWW/scripts/: run_tflite_reference.py
applications/VWW/src/: main.c
applications/fomo/: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
applications/fomo/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
applications/fomo/model/: compiler_input_yaml_template.yaml  ei-beer-vs.-cans-fomo-object-detection-tensorflow-lite-float32-model.5.lite  ei-beer-vs.-cans-fomo-object-detection-tensorflow-lite-int8-quantized-model.5.lite  ei-beer-vs.-cans-fomo-object-detection.h5
applications/fomo/src/: main.c
applications/gesture_recognition/: .clang-format  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  README.rst  prj.conf  sample.yaml  thingy53_nrf5340_cpuapp.overlay
applications/gesture_recognition/src/: app_version.h  inference_postprocessing.c  inference_postprocessing.h  main.c
applications/gesture_recognition/sysbuild/: CMakeLists.txt
applications/matter_ambient_sensing/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_release.conf  sample.yaml  sysbuild.conf
applications/matter_ambient_sensing/boards/: dmic_low_power.dtsi  nrf54lm20dk_nrf54lm20b_cpuapp.overlay
applications/matter_ambient_sensing/src/: ambient_sensing.cpp  ambient_sensing.h  app_task.cpp  chip_project_config.h  main.cpp  nrf_edgeai_task.cpp  nrf_edgeai_task.h
applications/matter_switch/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
applications/matter_switch/boards/: dmic_adafruit.dtsi  dmic_low_power.dtsi  nrf54lm20dk_nrf54lm20b_cpuapp.overlay
applications/matter_switch/src/: app_task.cpp  app_task.h  keyword.c  keyword.h  nrf_edgeai_task.cpp  nrf_edgeai_task.h  wakeword.c  wakeword.h
applications/person_det_picture/: CMakeLists.txt  Kconfig  prj.conf
applications/person_det_picture/scripts/: embed_demo_input.py  visualize_detection.py
applications/person_det_picture/src/: main.c  person_det_postprocess.c  person_det_postprocess.h
applications/person_detection/: CMakeLists.txt  Kconfig  README.md  README.rst  compiler_person_det_input.yaml  prj.conf  prj_release.conf  sample.yaml
applications/person_detection/boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay  nrf54lm20dk_nrf54lm20b_cpuapp_release.overlay
applications/person_detection/outputs/: nrf_axon_model_person_det_layers_.h  nrf_axon_model_person_det_test_vectors_.h
applications/person_detection/scripts/: check_tflite_vs_axon.py  live_usb_person_detection.py  prepare_demo_input.py  uart_rx_rgb565_frame.py
applications/person_detection/simulator/: mcunet_vww_sim_main.c
applications/person_detection/src/: main.c  person_det_postprocess.c  person_det_postprocess.h  postprocessing.c  postprocessing.h  usb_stream.c  usb_stream.h
applications/person_recognition/: .gitignore  CMakeLists.txt  README.md  compiler_mcunet_vww_320kb.yaml  compiler_person_det_input.yaml  prj.conf
applications/person_recognition/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20b_cpuapp.overlay
applications/person_recognition/data/: demo_input.npy
applications/person_recognition/models/: README.md  mcunet-320kb-1mb_vww.tflite  person-det-concat.tflite
applications/person_recognition/outputs/: nrf_axon_model_mcunet_vww_320kb_.h  nrf_axon_model_mcunet_vww_320kb_test_inference_labels_.csv  nrf_axon_model_person_det_.h  nrf_axon_model_person_det_test_inference_labels_.csv
applications/person_recognition/scripts/: add_concat_head.py  embed_test_images.py  export_mcunet_input_bin.py  prepare_demo_input.py  visualize_compare_inputs.py
applications/person_recognition/simulator/: CMakeLists.txt  README.md
applications/person_recognition/src/: main.c
applications/ww_kws/: CMakeLists.txt  Kconfig  README.rst  observability.conf  prj.conf  prj_release.conf  sample.yaml
applications/ww_kws/boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay
applications/ww_kws/src/: control_output.c  control_output.h  dmic.c  dmic.h  leds.c  leds.h  main.c  model_utils.h
axon_simulator/: CMakeLists.txt
drivers/axon/: CMakeLists.txt  Kconfig  README.rst  nrf_axon_nn_infer.c  nrf_axon_nn_infer_test.c  nrf_axon_nn_op_extensions.c
lib/axon/: CMakeLists.txt  README.rst
lib/axon/model_partition/: CMakeLists.txt  Kconfig  README.md
lib/axon/platform/: CMakeLists.txt
lib/nrf_edgeai/: CMakeLists.txt  Kconfig
lib/nrf_edgeai/cortex-m33/: CMakeLists.txt
lib/nrf_edgeai/cortex-m4/: CMakeLists.txt
samples/axon/axon_low_power/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_debug.conf  prj_gpio_trace.conf  sample.yaml
samples/axon/hello_axon/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/data_forwarder/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/data_forwarder/boards/: nrf54l15tag_nrf54l15_cpuapp.overlay
samples/data_forwarder/cddl/: data_forwarder.cddl
samples/data_forwarder/src/: main.c
samples/edge_impulse/hello_ei/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_ei_module.conf  prj_ei_standalone.conf  sample.yaml
samples/hello_axon/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/hello_axon/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
samples/hello_axon/src/: main.c
samples/multi_model/: CMakeLists.txt  Kconfig  overlay-ota.conf  prj.conf
samples/multi_model/boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay
samples/multi_model/include/: test_classification_data.h  test_models.h  test_regression_data.h
samples/multi_model/src/: main.c  (+8 more)
simulator/: CMakeLists.txt
tests/obsv/: CMakeLists.txt  prj.conf  testcase.yaml
tests/obsv_memfault/: CMakeLists.txt  prj.conf  testcase.yaml
tools/data_forwarder_host/: .gitignore  README.md  __init__.py  __main__.py  app.py  data_forwarder_host.spec  main.py  pyproject.toml  requirements.txt
zephyr/: CMakeLists.txt  Kconfig.edge_ai  module.yml  patches.yml
(+906 files in other folders)
